@@ -24,6 +24,7 @@ import net.mcreator.element.GeneratableElement;
 import net.mcreator.generator.GeneratorFile;
 import net.mcreator.ui.component.JItemListField;
 import net.mcreator.ui.laf.FileIcons;
+import net.mcreator.ui.minecraft.JEntriesList;
 import net.mcreator.ui.minecraft.MCItemHolder;
 import net.mcreator.ui.modgui.ModElementGUI;
 import org.apache.commons.io.FilenameUtils;
@@ -41,7 +42,6 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class ModElementCodeViewer<T extends GeneratableElement> extends JTabbedPane
 		implements MouseListener, KeyListener, ActionListener, ChangeListener, DocumentListener {
@@ -76,6 +76,12 @@ public class ModElementCodeViewer<T extends GeneratableElement> extends JTabbedP
 				mcItemHolder.addBlockSelectedListener(this);
 			} else if (component instanceof JItemListField<?> listField) {
 				listField.addChangeListener(this);
+			} else if (component instanceof JEntriesList entriesList) {
+				entriesList.setEntryCreationListener(c -> {
+					this.registerUI(c);
+					reload();
+				});
+				component.addMouseListener(this);
 			} else if (component instanceof AbstractButton button) {
 				button.addActionListener(this);
 			} else if (component instanceof JSpinner button) {
@@ -127,13 +133,12 @@ public class ModElementCodeViewer<T extends GeneratableElement> extends JTabbedP
 						}
 					}
 
-					for (File file : cache.keySet()) {
-						if (!files.stream().map(GeneratorFile::file).collect(Collectors.toList())
-								.contains(file)) { // deleted file
+					cache.keySet().stream().toList().forEach(file -> {
+						if (!files.stream().map(GeneratorFile::file).toList().contains(file)) { // deleted file
 							remove(cache.get(file));
 							cache.remove(file);
 						}
-					}
+					});
 					setBackground((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT"));
 				} catch (Exception ignored) {
 					setBackground(new Color(0x8D5C5C));
